SerialPortConnect UI 추가

--- a/uCanView/qml.qrc
+++ b/uCanView/qml.qrc
@@ -5,5 +5,15 @@
         <file>NewTransmitDialog.qml</file>
         <file>EditTransmitDialog.qml</file>
         <file>D2Coding.ttf</file>
+        <file>icons/openfile.png</file>
+        <file>icons/savefile.png</file>
+        <file>icons/connect.png</file>
+        <file>icons/disconnect.png</file>
+        <file>icons/editmsg.png</file>
+        <file>icons/newmsg.png</file>
+        <file>icons/reset.png</file>
+        <file>icons/copy.png</file>
+        <file>icons/cut.png</file>
+        <file>icons/paste.png</file>
     </qresource>
 </RCC>
